...
    <>
      <Stack.SearchBar
        autoCapitalize="none"
        hideWhenScrolling={false}
        onCancelButtonPress={() => setText('')}
        onChangeText={(event) => setText(event.nativeEvent.text)}
        placeholder="Events and tasks"
        textColor={colors.text}
        tintColor={colors.primary}
      />
      <SearchResultsList search={search} text={text} timeZone={timeZone} />
    </>
  );
...
